2008-05-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (check_for_variable_color):  Consolidate all the checks
	for deriving color from a data column into a single subroutine.

	* src/plot2d.c (eval_plots) docs/gnuplot.doc:  Do not prevent the user
	from requesting palette colors for a 2D plot.  Reading a palette color
	value from an additional data column works fine for any plot style that
	isn't already using the full set of column assignments (candlesticks,
	boxxyerror).

2008-05-25  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* term/emf.trm (EMF_options): Option 'size' broke out of parsing
	loop prematurely.

2008-05-23  Philipp K. Janert <janert@ieee.org>

	* demo/all.dem demo/smooth.dem demo/dgrid3d.dem demo/random-points
	demo/gnu-valley: added demos for the new dgrid3d kernels and for 
	the "smooth cumulative"	smoothing algo.	

2008-05-22  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/bitmap.c (b_vector): If either end of a vector would fall outside
	the canvas area, don't draw it.  This prevents segfaults and memory
	access problems if the terminal coordinates overflow or go negative.
	Bug #1969415

2008-05-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (inverse_error_func):  The piecewise numerical 
	approximation failed to handle the case where x was exactly the join
	point for the pieces.  Include +/- 0.7 in the central piece.
	Also add one more cycle of Newton-Raphson.
	Bug #1962800

	* docs/doc2texi.el docs/gnuplot.texi:  Update

	* src/graphics.c (boundary): If it is impossible to reserve as much
	space as needed for the key, print a warning and leave the plot borders
	where they are. This prevents the plot border from being pushed entirely
	off the canvas.

2008-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm (EMF_dashtype):  Don't ignore linetype LT_AXIS.

2008-05-20  Ethan A Merritt  <merritt@u.washington.edu>
	