@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.266 2008/05/25 17:14:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.267 2008/05/27 21:57:50 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -5328,6 +5328,7 @@ do_key_sample(
 
     if ((this_plot->plot_type == DATA)
 	&& (this_plot->plot_style & PLOT_STYLE_HAS_ERRORBAR)
+	&& (this_plot->plot_style != CANDLESTICKS)
 	&& (bar_size > 0.0)) {
 	draw_clip_line( xl + key_sample_left, yl + ERRORBARTIC,
 			xl + key_sample_left, yl - ERRORBARTIC);
